--- a/static/pillar-construction.html
+++ b/static/pillar-construction.html
@@ -51,9 +51,9 @@
           </div>
       </nav>
         <!--  ------------------------------------ -->
-        <div class="jumbotron jumbotron-fluid" style="background-image: url(images/Construction-stored-bg.jpg); background-size: cover; background-position: center center; height: 50vh;">
+        <div class="jumbotron jumbotron-fluid" style="background-image: construction.jpg; background-size: cover; background-position: center center; height: 50vh;">
             <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 100%;">
-                <h1 class="display-4">Construction-Stored Carbon</h1>
+                <h1 class="display-1">Construction-Stored Carbon</h1>
                 <p class="lead">Key for storing carbon dioxide</p>
             </div>
         </div>
