--- a/static/template.html
+++ b/static/template.html
@@ -9,6 +9,7 @@
                 font-size: 1.5rem;
             }
         </style>
+        <link href="templates/landing.css" rel="stylesheet">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
