--- a/static/landing.html
+++ b/static/landing.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Template</title>
+        <title>Nature based solutions</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">       
         <style>
             .nav-item{
@@ -24,23 +24,23 @@
                 <div class="collapse navbar-collapse justify-content-center text-center" id="navbarNav">
                     <ul class="navbar-nav mx-auto">
                     <li class="nav-item px-3">
-                        <a class="nav-link" href="#">Our Solution</a>
+                        <a class="nav-link" href="landing.html">Our Solution</a>
                     </li>
                     <li class="nav-item px-3">
-                        <a class="nav-link" href="#">FAQ</a>
+                        <a class="nav-link" href="faq.html">FAQ</a>
                     </li>
                     <li class="nav-item px-3">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="aboutus.html">About Us</a>
                     </li>
                     <li class="nav-item dropdown px-3">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Pillars
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Land</a></li>
-                        <li><a class="dropdown-item" href="#">Ocean</a></li>
-                        <li><a class="dropdown-item" href="#">Construction</a></li>
-                        <li><a class="dropdown-item" href="#">Rock</a></li>
+                        <li><a class="dropdown-item" href="pillar-land.html">Land</a></li>
+                        <li><a class="dropdown-item" href="pillar-ocean.html">Ocean</a></li>
+                        <li><a class="dropdown-item" href="pillar-construction.html">Construction</a></li>
+                        <li><a class="dropdown-item" href="pillar-rock.html">Rock</a></li>
                         </ul>
                     </li>
                     <li class="nav-item px-3">
@@ -96,21 +96,21 @@
             <footer class="py-3 my-4">
               <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item"><a href="#" class="nav-link px-3 text-muted"></a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-3 text-muted">Our Solution</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-3 text-muted">FAQ</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-3 text-muted">About Us</a></li>
+                <li class="nav-item"><a href="landing.html" class="nav-link px-3 text-muted">Our Solution</a></li>
+                <li class="nav-item"><a href="faq.html" class="nav-link px-3 text-muted">FAQ</a></li>
+                <li class="nav-item"><a href="aboutus.html" class="nav-link px-3 text-muted">About Us</a></li>
                 <li class="nav-item dropdown text-muted">
                     <a class="nav-link px-3 dropdown-toggle text-muted" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Pillars
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#">Land</a></li>
-                    <li><a class="dropdown-item" href="#">Ocean</a></li>
-                    <li><a class="dropdown-item" href="#">Construction</a></li>
-                    <li><a class="dropdown-item" href="#">Rock</a></li>
+                    <li><a class="dropdown-item" href="pillar-land.html">Land</a></li>
+                    <li><a class="dropdown-item" href="pillar-ocean.html">Ocean</a></li>
+                    <li><a class="dropdown-item" href="pillar-construction.html">Construction</a></li>
+                    <li><a class="dropdown-item" href="pillar-rock.html">Rock</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a href="#" class="nav-link px-3 text-muted">Entrepreneurs</a></li>
+                <li class="nav-item"><a href="entrepreneurs.html" class="nav-link px-3 text-muted">Entrepreneurs</a></li>
               </ul>
               <p class="text-center text-muted">© 2024 CompSocSci</p>
             </footer>
