--- a/static/pillar-ocean.html
+++ b/static/pillar-ocean.html
@@ -4,9 +4,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Rock-stored carbon</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">       
+        <link rel="stylesheet" href="templates/style.css"> 
         <style>
             .nav-item{
-                font-size: 1.5rem;
+                font-size: 1.25rem;
             }
         </style>
     </head>
@@ -70,39 +71,68 @@
             </div>
         </div>
         <div class="divider"></div>
-        <!-- Facts and figures -->`
-        <div class="container col-xxl-8 px-4 py-5">
-            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-                <div class="col-lg-6">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">Facts & Figures</h1>
-                    <ul class="list-group">
-                        <li class="list-group-item">
-                            <h5 class="mb-1">Bullet point 1</h5>
-                            <p class="mb-0">Subtext for bullet point 1</p>
-                        </li>
-                        <li class="list-group-item">
-                            <h5 class="mb-1">Bullet point 2</h5>
-                            <p class="mb-0">Subtext for bullet point 2</p>
-                        </li>
-                        <li class="list-group-item">
-                            <h5 class="mb-1">Bullet point 3</h5>
-                            <p class="mb-0">Subtext for bullet point 3</p>
-                        </li>
-                        <li class="list-group-item">
-                            <h5 class="mb-1">Bullet point 4</h5>
-                            <p class="mb-0">Subtext for bullet point 4</p>
-                        </li>
-                        <li class="list-group-item">
-                            <h5 class="mb-1">Bullet point 5</h5>
-                            <p class="mb-0">Subtext for bullet point 5</p>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-10 col-sm-8 col-lg-6">
-                    <img src="images/rock.jpg" class="d-block mx-lg-auto img-fluid" alt="FILL IN" width="700" height="500" loading="lazy">
-                </div>
+
+
+
+
+
+
+<!-- ======= facts and figures ======= -->
+<section id="facts" class="facts section-bg">
+
+    <div class="section-title">
+        <h1 class="display-5 fw-bold lh-1 mb-3">Facts & Figures</h1>
+      </div>
+
+    <div class="container">
+
+      <div class="row">
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="card">
+            <img src="https://images.pexels.com/photos/63340/pexels-photo-63340.jpeg" class="card-img-top" alt="...">
+            <div class="card-icon">
+              <i class="bx bx-book-reader"></i>
             </div>
+            <div class="card-body">
+              <h5 class="card-title">ocean</a></h5>
+              <p class="mb-0">The global ocean is a significant sink for anthropogenic carbon, absorbing roughly a third of human CO2 emitted over the industrial period
+            </p>
+              <a href="https://bg.copernicus.org/articles/10/2169/2013/">Source</a>
+           </div>
+          </div>
         </div>
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="card">
+            <img src="https://images.pexels.com/photos/3157890/pexels-photo-3157890.jpeg" class="card-img-top" alt="...">
+            <div class="card-icon">
+              <i class="bx bx-calendar-edit"></i>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Coral Reefs</h5>
+                <p class="mb-0">Coral reefs catch up to 111 million tonnes carbon per year.</p>
+                <a href="https://www.sciencedirect.com/science/article/abs/pii/003101829190172N">Source</a>
+             </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="card">
+            <img src="https://images.pexels.com/photos/8849618/pexels-photo-8849618.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" class="card-img-top" alt="...">
+            <div class="card-icon">
+              <i class="bx bx-landscape"></i>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">seaweed</h5>
+                <p class="mb-0">Seaweed is an cheap and effective way to help with carbon sequestration.</p>
+                <a href="https://www.cabidigitallibrary.org/doi/full/10.1079/cabireviews202217009">Source</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+
         <!-- Quiz -->
         <div class="container col-xl-10 col-xxl-8 px-4 py-5">
             <h1 class="display-5 fw-bold lh-1 mb-3">Quiz</h1>
@@ -138,6 +168,8 @@
             </form>
         </div>
         <div class="divider"></div>
+
+
         <!-- Alternatives -->
         <div class="container">
             <p class="display-3">Alternatives</p>
@@ -162,7 +194,8 @@
                 </div><!-- /.col-lg-4 -->
             </div>
         </div>
-    
+
+
         <!--  ------------------------------------ -->
         <div class="container">
             <footer class="py-3 my-4">
