--- a/static/index.html
+++ b/static/index.html
@@ -45,7 +45,7 @@
                         </ul>
                     </li>
                     <li class="nav-item px-3">
-                        <a class="nav-link" href="#">Entrepreneurs</a>
+                        <a class="nav-link" href="entrepreneurs.html">Entrepreneurs</a>
                     </li>
                     </ul>
                 </div>
