--- a/static/entrepreneurs.html
+++ b/static/entrepreneurs.html
@@ -14,7 +14,7 @@
     <body>
    <!---- ======= Navbar ======= ---->
    <body>
-    <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #2f4831;">
+    <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #00030064;">
         <div class="container">
         <div class="row">
             <div class="col-md-12"></div>
@@ -56,29 +56,39 @@
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 1"></button>
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="images/entrepreneurs/offshore/main.jpg" class="d-block mx-lg-auto img-fluid" alt="Entrepreneur one">
+                <img src="images/entrepreneurs/heleenelshuis.jpg" class="d-block mx-lg-auto img-fluid" alt="Entrepreneur one">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Ed Wijnker</h5>
+                    <h5>Heleen Elshuis</h5>
                     <p>GreenSand - olivine sand and rock trading company</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="images/entrepreneurs/bamboo/main.jpg" class="d-block mx-lg-auto img-fluid" alt="Entrepreneur two">
+                <img src="images/entrepreneurs/alexanderebbing.jpg" class="d-block mx-lg-auto img-fluid" alt="Entrepreneur two">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Carl Mintjens</h5>
+                    <h5>Alexander Ebbing</h5>
                     <p>Bamboologic - Planting bamboo</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="images/entrepreneurs/seaweed/main.jpeg" class="d-block mx-lg-auto img-fluid" alt="Entrepreneur three">
+                <img src="images/entrepreneurs/cleanupbamboo.jpg" class="d-block mx-lg-auto img-fluid" alt="Entrepreneur three">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Joost Wouters</h5>
+                    <h5>Cleanup Bamboo</h5>
                     <p>The Seaweed Company</p>
                 </div>
             </div>
+            <div class="carousel-item">
+              <img src="images/entrepreneurs/wheelbarron.jpg" class="d-block mx-lg-auto img-fluid" alt="Entrepreneur four">
+              <div class="carousel-caption d-none d-md-block">
+                  <h5>Cleanup Bamboo</h5>
+                  <p>The Seaweed Company</p>
+              </div>
+          </div>            
+        </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
